--- a/components/nh9lxhvug-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/nh9lxhvug-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: nh9lxhvug-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-2b2a7aee69.hhub.p3.openshiftapps.com/rhtap/rhtap-qe-java-quarkus:b4c9793bc54d61658150134f72d69627687f844e@sha256:3f7bd78c5034247b42473c21d45cc7e3a300084974a341454fdbf02e3aa1d8a6
+          name: container-image
